samples/_failures_safe/1761539517_76440b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d51c355.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_2d51c355.c:179:26: error: missing terminating " character
  179 |         "IDLE", "READY", "PRO
      |                          ^~~~
./samples/SAFE/__tmp_2d51c355.c:179:9: error: expected expression at end of input
  179 |         "IDLE", "READY", "PRO
      |         ^~~~~~
./samples/SAFE/__tmp_2d51c355.c:179:9: error: expected declaration or statement at end of input
